--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<!-- <md-toolbar color="white">
+  <h1>CS Stream Scoreboard</h1>
+</md-toolbar> -->
 <div style="text-align:center">
   <router-outlet></router-outlet>
 </div>
