--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,34 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+@font-face
+{
+    font-family: csRegular;
+    src: url(./assets/fonts/cs_regular.ttf);
+}
+
+body {
+    font-family: 'Saira Semi Condensed';
+    background: url(http://cdn.akamai.steamstatic.com/steamcommunity/public/images/items/730/ef7cb44d312df5038cba0f69a0901da427900645.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+.mat-toolbar h1 {
+    font-family: csRegular;
+    font-size: 30px;
+}
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;
+    align-content: stretch;
+}
+
+.mat-card {
+    font-family: 'Saira Semi Condensed';
+    cursor: pointer;
+    margin: 20px;
+}
